{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 158,
  "lineage": "7ee05228-16c8-db46-5ccd-92e6f1255f8f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c66bc1182261d43e",
            "arn": "arn:aws:ec2:ap-southeast-1:847759535325:elastic-ip/eipalloc-0c66bc1182261d43e",
            "association_id": "eipassoc-0be2b087aab6b86f2",
            "domain": "vpc",
            "id": "eipalloc-0c66bc1182261d43e",
            "instance": "i-0ba0b8bf756814c5a",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0c80e41c53d8e41ff",
            "private_dns": "ip-192-168-1-10.ap-southeast-1.compute.internal",
            "private_ip": "192.168.1.10",
            "public_dns": "ec2-54-179-25-167.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.25.167",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.security_groups.aws_security_group.this",
            "module.static_webpage_ec2.aws_instance.this",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:847759535325:internet-gateway/igw-0ead62781ad8a7e79",
            "id": "igw-0ead62781ad8a7e79",
            "owner_id": "847759535325",
            "tags": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "igw-01",
              "Owner": "pascalpeh"
            },
            "tags_all": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "igw-01",
              "Owner": "pascalpeh"
            },
            "vpc_id": "vpc-000157ac2e49f968a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nacls",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:847759535325:network-acl/acl-00ad1d3f1e67d865f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00ad1d3f1e67d865f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "847759535325",
            "subnet_ids": [
              "subnet-08b7f656be5eebf6d",
              "subnet-0bbd88c6ea369dc00"
            ],
            "tags": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "nacl-pub-01",
              "Owner": "pascalpeh"
            },
            "tags_all": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "nacl-pub-01",
              "Owner": "pascalpeh"
            },
            "vpc_id": "vpc-000157ac2e49f968a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03491f976e92e0908",
            "route_table_id": "rtb-0cef52e3efb861066",
            "subnet_id": "subnet-08b7f656be5eebf6d"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.this",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e788f4daa28ce7ee",
            "route_table_id": "rtb-0cef52e3efb861066",
            "subnet_id": "subnet-0bbd88c6ea369dc00"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.this",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_igw",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ead62781ad8a7e79",
            "id": "r-rtb-0cef52e3efb8610661080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cef52e3efb861066",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.this",
            "module.route_tables.aws_route_table.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:847759535325:route-table/rtb-0cef52e3efb861066",
            "id": "rtb-0cef52e3efb861066",
            "owner_id": "847759535325",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "rt-pub-01",
              "Owner": "pascalpeh"
            },
            "tags_all": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "rt-pub-01",
              "Owner": "pascalpeh"
            },
            "timeouts": null,
            "vpc_id": "vpc-000157ac2e49f968a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:847759535325:security-group/sg-09f51fe031d9a49a8",
            "description": "Security Group for Bastion login",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f51fe031d9a49a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP Ping",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP rule",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sgrp-bastion-001",
            "name_prefix": "",
            "owner_id": "847759535325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgrp-bastion-001"
            },
            "tags_all": {
              "Name": "sgrp-bastion-001"
            },
            "timeouts": null,
            "vpc_id": "vpc-000157ac2e49f968a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:847759535325:security-group/sg-00daa6bfdc81499fb",
            "description": "Security Group for Web nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00daa6bfdc81499fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP inbound Rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS inbound Rule",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sgrp-web-001",
            "name_prefix": "",
            "owner_id": "847759535325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgrp-web-001"
            },
            "tags_all": {
              "Name": "sgrp-web-001"
            },
            "timeouts": null,
            "vpc_id": "vpc-000157ac2e49f968a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.static_webpage_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06dc977f58c8d7857",
            "arn": "arn:aws:ec2:ap-southeast-1:847759535325:instance/i-0ba0b8bf756814c5a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba0b8bf756814c5a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_ec2_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c80e41c53d8e41ff",
            "private_dns": "ip-192-168-1-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.10",
            "public_dns": "ec2-54-255-185-164.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.185.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04992fd7f36e98409",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b7f656be5eebf6d",
            "tags": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "ec2-static-webpage",
              "Owner": "pascalpeh"
            },
            "tags_all": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "ec2-static-webpage",
              "Owner": "pascalpeh"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "ebs-webserver-os",
              "Owner": "pascalpeh"
            },
            "vpc_security_group_ids": [
              "sg-00daa6bfdc81499fb",
              "sg-09f51fe031d9a49a8"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.this",
            "module.subnets.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:847759535325:subnet/subnet-08b7f656be5eebf6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b7f656be5eebf6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847759535325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "sub-a-pub-01",
              "Owner": "pascalpeh"
            },
            "tags_all": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "sub-a-pub-01",
              "Owner": "pascalpeh"
            },
            "vpc_id": "vpc-000157ac2e49f968a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:847759535325:subnet/subnet-0bbd88c6ea369dc00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.1.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbd88c6ea369dc00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847759535325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "sub-b-pub-01",
              "Owner": "pascalpeh"
            },
            "tags_all": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "sub-b-pub-01",
              "Owner": "pascalpeh"
            },
            "vpc_id": "vpc-000157ac2e49f968a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:847759535325:vpc/vpc-000157ac2e49f968a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.1.0/24",
            "default_network_acl_id": "acl-05ac5977074a8384c",
            "default_route_table_id": "rtb-0ac1cdd17777676f2",
            "default_security_group_id": "sg-071b1edb5984884af",
            "dhcp_options_id": "dopt-0c77ef68",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000157ac2e49f968a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac1cdd17777676f2",
            "owner_id": "847759535325",
            "tags": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "vpc-01",
              "Owner": "pascalpeh"
            },
            "tags_all": {
              "Description": "Created using Terraform",
              "Environment": "Sandbox",
              "Name": "vpc-01",
              "Owner": "pascalpeh"
            }
          }
        }
      ]
    }
  ]
}